--- a/index.html
+++ b/index.html
@@ -26,7 +26,45 @@
       </header>
 </nav>
 <section>
-        
+        <div class="d-flex align-center justify-around p-2rem">
+            <img src="./images/undraw_game_day_ucx9.svg" alt="" srcset="" class="w-half">
+            <div class="d-flex flex-dr-col">
+                <h3 class="">
+                    Are you smart ? 
+                </h3>
+                <h2 class="p-1">Lets try check ..</h2>
+                <button class="btn secondary"><a href="#quizz-cards-section" class="white-color">Explore</a></button>
+            </div>
+           
+        </div>
+        <div class="quizz-cards d-flex p-2rem" id="quizz-cards-section">
+            <div class="card shadow p-zero">
+                <div class="" >
+                    <figure >
+                        <img src="./images/ipl_auction.webp" alt="ipl_auction" >
+                    </figure>
+                    <div class="card_info">
+                        <h3>
+                            IPL 2022 team
+                        </h3>
+                    </div>
+                </div>
+                <button class="btn secondary w-full">Play Now</button>
+            </div>
+            <div class="card shadow p-zero">
+                <div class="" >
+                    <figure >
+                        <img src="./images/entrepreneurship1.jpeg" alt="entrepreneurship" >
+                    </figure>
+                    <div class="card_info">
+                        <h3>
+                            Entrepreneurs
+                        </h3>
+                    </div>
+                </div>
+                <button class="btn secondary w-full">Play Now</button>
+            </div>
+        </div>
 </section>
 </body>
 </html>
