--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
       </header>
 </nav>
 <section>
-        
+        <div class="outer-container-rules">
+            <div class="card rules-card">
+               <h1 class="text-center">Rules</h1>
+               <div><i class="fa fa-star" aria-hidden="true"></i> Each right answer scores 10 Points.</div>
+               <div><i class="fa fa-star" aria-hidden="true"></i> Each multiple choice question has only one correct answer.</div>
+               <div><i class="fa fa-star" aria-hidden="true"></i> To win the quiz you need to score more than 80%.</div>
+               <button class="btn secondary w-full">Start Quiz</button>
+            </div>
+        </div>        
 </section>
 </body>
 </html>
