big-fix-playnow btn

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </h3>
                     </div>
                 </div>
-                <button class="btn secondary w-full">Play Now</button>
+                <a  href="./rules/rules.html" class="white-color"><button class="btn secondary w-full">Play Now</button></a>
             </div>
             <div class="card shadow p-zero">
                 <div class="" >
