--- a/rules/rules.html
+++ b/rules/rules.html
@@ -7,7 +7,7 @@
     <title>Play-Q</title>
     <link rel="stylesheet" 
 		href="https://kaizen-ui.netlify.app//styles.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" 
 	  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
