--- a/question-1/question-1.html
+++ b/question-1/question-1.html
@@ -17,11 +17,13 @@
           <div class="brandName"><a href="../index.html">Play-Q</a></div>
           <div id="hambar" class="hambar"><i class="fa fa-bars" aria-hidden="true"></i></div>
            <ul class="navbarOptions d-flex d-flex justify-space-bw align-center">
-                <li><a href="https://github.com/harshkotkar5557" alt="#"><i class="fa fa-github" 
-                aria-hidden="true">&nbsp;</i></a></li>
-                 <li><a href="https://www.linkedin.com/in/haresh-kotkar-389a08139/" alt="#"><i 
-                 class="fa fa-linkedin-square" aria-hidden="true">&nbsp;</i></a> </li>
-                 <li><a href="https://twitter.com/KotkarHaresh" alt="#"><i class="fa fa-twitter-square" aria-hidden="true">&nbsp;</i></a></li>
+            <a href="./rules/rules.html" class="white-color"><button class="btn secondary letter-spacing">Rules</button></a>
+            <a href="#">
+               <div class="avatar sm cursor-pointer">
+                   <img src=".s./images/avatar-img.jpg" alt="avatar-img">
+               </div>
+            </a>
+           
             </ul>
       </header>
 </nav>
@@ -42,5 +44,15 @@
        
     </div>
 </section>
+<footer class="footer-container d-flex justify-center align-center flex-dr-col gap-1rem">
+    <span>Made with <i class="fa fa-heart" aria-hidden="true"></i> by Haresh Kotkar</span>
+    <ul class="gap-1rem d-flex justify-space-bw align-center">
+        <li><a href="https://github.com/harshkotkar5557" alt="#" class="white-color"><i class="fa fa-github" 
+        aria-hidden="true">&nbsp;</i></a></li>
+         <li><a href="https://www.linkedin.com/in/haresh-kotkar-389a08139/" alt="#" class="white-color"><i 
+         class="fa fa-linkedin-square" aria-hidden="true">&nbsp;</i></a> </li>
+         <li><a href="https://twitter.com/KotkarHaresh" alt="#" class="white-color"><i class="fa fa-twitter-square" aria-hidden="true">&nbsp;</i></a></li>
+    </ul>
+</footer>
 </body>
 </html>
