--- a/index.html
+++ b/index.html
@@ -69,5 +69,15 @@
             </div>
         </div>
 </section>
+<footer class="footer-container d-flex justify-center align-center flex-dr-col gap-1rem">
+    <span>Made with <i class="fa fa-heart" aria-hidden="true"></i> by Haresh Kotkar</span>
+    <ul class="gap-1rem d-flex justify-space-bw align-center">
+        <li><a href="https://github.com/harshkotkar5557" alt="#" class="white-color"><i class="fa fa-github" 
+        aria-hidden="true">&nbsp;</i></a></li>
+         <li><a href="https://www.linkedin.com/in/haresh-kotkar-389a08139/" alt="#" class="white-color"><i 
+         class="fa fa-linkedin-square" aria-hidden="true">&nbsp;</i></a> </li>
+         <li><a href="https://twitter.com/KotkarHaresh" alt="#" class="white-color"><i class="fa fa-twitter-square" aria-hidden="true">&nbsp;</i></a></li>
+    </ul>
+</footer>
 </body>
 </html>
