--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div id="hambar" class="hambar"><i class="fa fa-bars" aria-hidden="true"></i></div>
            <ul class="navbarOptions d-flex d-flex justify-space-bw align-center">
             <a href="./rules/rules.html" class="white-color"><button class="btn secondary letter-spacing">Rules</button></a>
-                 <a href="#">
+                 <a href="/login/login.html">
                     <div class="avatar sm cursor-pointer">
                         <img src="./images/avatar-img.jpg" alt="avatar-img">
                     </div>
