--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play-Q</title>
+    <title>Quizza-T</title>
     <link rel="stylesheet" 
 		href="https://kaizen-ui.netlify.app//styles.css">
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar_std grey-bg">
         <header class="d-flex justify-space-bw align-center">
-          <div class="brandName"><a href="../index.html">Play-Q</a></div>
+          <div class="brandName"><a href="../index.html">Quizza-T</a></div>
           <div id="hambar" class="hambar"><i class="fa fa-bars" aria-hidden="true"></i></div>
            <ul class="navbarOptions d-flex d-flex justify-space-bw align-center">
             <a href="./rules/rules.html" class="white-color"><button class="btn secondary letter-spacing">Rules</button></a>
@@ -28,41 +28,43 @@
       </header>
 </nav>
 <section>
-        <div class="d-flex align-center justify-around p-2rem">
+        <div class="d-flex align-center justify-around p-2rem bg-quizz-home">
             <img src="./images/undraw_game_day_ucx9.svg" alt="" srcset="" class="w-half">
             <div class="d-flex flex-dr-col">
-                <h3 class="">
-                    Are you smart ? 
-                </h3>
-                <h2 class="p-1">Lets try check ..</h2>
-                <a href="#quizz-cards-section" class="white-color"><button class="btn secondary letter-spacing">Explore</button></a>
+                <h1>
+                   Welcome to Quizza-Tech  
+                </h1>
+                <h3 class="p-1">Lets check how tech-savvy you are !</h3>
+                <a href="#quizz-cards-section" class="white-color p-t-15 d-flex justify-end"><button class="btn secondary letter-spacing">Explore</button></a>
                 
             </div>
            
         </div>
         <div class="quizz-cards d-flex p-2rem" id="quizz-cards-section">
             <div class="card shadow p-zero">
-                <div class="" >
+                <div >
                     <figure >
                         <img src="./images/ipl_auction.webp" alt="ipl_auction" >
                     </figure>
                     <div class="card_info">
                         <h3>
-                            IPL 2022 team
+                            Javascript quizza
                         </h3>
+                        <span>Test your Javascript skills?</span>
                     </div>
                 </div>
                 <a  href="./rules/rules.html" class="white-color"><button class="btn secondary w-full">Play Now</button></a>
             </div>
             <div class="card shadow p-zero">
-                <div class="" >
+                <div >
                     <figure >
                         <img src="./images/entrepreneurship1.jpeg" alt="entrepreneurship" >
                     </figure>
                     <div class="card_info">
                         <h3>
-                            Entrepreneurs
+                            Entrepreneurs quizza
                         </h3>
+                        <span>How well you know Indian entrepreneurs?</span>
                     </div>
                 </div>
                 <button class="btn secondary w-full">Play Now</button>
