--- a/question-1/question-1.html
+++ b/question-1/question-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play-Q</title>
+    <title>Quizza-T</title>
     <link rel="stylesheet" 
 		href="https://kaizen-ui.netlify.app//styles.css">
     <link rel="stylesheet" href="../style.css">
@@ -14,13 +14,13 @@
 <body>
     <nav class="navbar_std grey-bg">
         <header class="d-flex justify-space-bw align-center">
-          <div class="brandName"><a href="../index.html">Play-Q</a></div>
+          <div class="brandName"><a href="../index.html">Quizza-T</a></div>
           <div id="hambar" class="hambar"><i class="fa fa-bars" aria-hidden="true"></i></div>
            <ul class="navbarOptions d-flex d-flex justify-space-bw align-center">
-            <a href="./rules/rules.html" class="white-color"><button class="btn secondary letter-spacing">Rules</button></a>
-            <a href="#">
+            <a href="../rules/rules.html" class="white-color"><button class="btn secondary letter-spacing">Rules</button></a>
+            <a href="../login/login.html">
                <div class="avatar sm cursor-pointer">
-                   <img src=".s./images/avatar-img.jpg" alt="avatar-img">
+                   <img src="../images/avatar-img.jpg" alt="avatar-img">
                </div>
             </a>
            
@@ -33,12 +33,12 @@
             <span>Question: 1/5</span>
             <button class="btn danger">Quit</button>
         </div>
-        <h1>1. How many teams are participate in IPL 2022?</h1>
+        <h1>1. Which built-in method adds one or more elements to the end of an array and returns the new length of the array?</h1>
         <ul class="quiz-question-option">
-            <li class="option-items">A. 10</li>
-            <li class="option-items">B. 20</li>
-            <li class="option-items">C. 8</li>
-            <li class="option-items">D. 12</li>
+            <li class="option-items">A. last()</li>
+            <li class="option-items">B. put()</li>
+            <li class="option-items">C. push()</li>
+            <li class="option-items">D. None of the above</li>
         </ul>
         <a href="../result/result.html" class="white-color"> <button class="btn secondary w-full">Next <i class="fa fa-arrow-right" aria-hidden="true"></i></button></a>
        
