--- a/signup/signup.html
+++ b/signup/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobby</title>
+    <title>Quizza-T</title>
     <link rel="stylesheet" 
 		href="https://kaizen-ui.netlify.app//styles.css">
     <link rel="stylesheet" href="../style.css">
@@ -14,11 +14,11 @@
 <body>
     <nav class="navbar_std grey-bg">
         <header class="d-flex justify-space-bw align-center">
-          <div class="brandName"><a href="../index.html">Play-Q</a></div>
+          <div class="brandName"><a href="../index.html">Quizza-T</a></div>
           <div id="hambar" class="hambar"><i class="fa fa-bars" aria-hidden="true"></i></div>
            <ul class="navbarOptions d-flex d-flex justify-space-bw align-center">
-            <a href="./rules/rules.html" class="white-color"><button class="btn secondary letter-spacing">Rules</button></a>
-                 <a href="/login/login.html">
+            <a href="../rules/rules.html" class="white-color"><button class="btn secondary letter-spacing">Rules</button></a>
+                 <a href="../login/login.html">
                     <div class="avatar sm cursor-pointer">
                         <img src="../images/avatar-img.jpg" alt="avatar-img">
                     </div>
