--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="card shadow p-zero">
                 <div >
                     <figure >
-                        <img src="./images/ipl_auction.webp" alt="ipl_auction" >
+                        <img src="./images/js-img.png" alt="ipl_auction" height="250px">
                     </figure>
                     <div class="card_info">
                         <h3>
@@ -58,7 +58,7 @@
             <div class="card shadow p-zero">
                 <div >
                     <figure >
-                        <img src="./images/entrepreneurship1.jpeg" alt="entrepreneurship" >
+                        <img src="./images/entrepreneurship1.jpeg" alt="entrepreneurship" height="250px">
                     </figure>
                     <div class="card_info">
                         <h3>
